@@ -10,13 +10,11 @@
 <parent>
 	<groupId>org.springframework.boot</groupId>
 	<artifactId>spring-boot-starter-parent</artifactId>
-	<version>1.5.10.RELEASE</version>
+	<version>2.2.0.RELEASE</version>
 </parent>
 
 <properties>
 	<java.version>11</java.version>
-	<thymeleaf.version>3.0.2.RELEASE</thymeleaf.version>
-	<thymeleaf-layout-dialect.version>2.1.2</thymeleaf-layout-dialect.version>
 	<neo4j-ogm.version>2.1.4</neo4j-ogm.version>
 	<maven.compiler.source>1.8</maven.compiler.source>
 	<maven.compiler.target>1.8</maven.compiler.target>
@@ -39,7 +37,7 @@
 	<module>properties</module>
 	<module>utils</module>
 	<module>scripts</module>
-<module>commons</module>
+	<module>commons</module>
 </modules>
 
 <dependencies>
@@ -151,6 +149,16 @@
 		<compilerArgument>-parameters</compilerArgument>
 		</configuration>
 	</plugin>
+	<!--<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-surefire-plugin</artifactId>
+		<version>2.22.0</version>
+		<configuration>
+		<forkCount>3</forkCount>
+		<reuseForks>true</reuseForks>
+		<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+		</configuration>
+	</plugin>-->
 	<plugin>
 		<groupId>org.apache.maven.plugins</groupId>
 		<artifactId>maven-dependency-plugin</artifactId>
@@ -231,7 +239,7 @@
 			</googleJavaFormat>
 
 			<licenseHeader>
-			<content>
+				<content>
 /*
 * Copyright 2021 EMBL - European Bioinformatics Institute
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not use this
@@ -242,7 +250,7 @@
 * CONDITIONS OF ANY KIND, either express or implied. See the License for the
 * specific language governing permissions and limitations under the License.
 */
-			</content>  <!-- or <file>${basedir}/license-header</file> -->
+				</content>  <!-- or <file>${basedir}/license-header</file> -->
 			</licenseHeader>
 		</java>
 		</configuration>
